# Fits2Movie

./: .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  Fits2Movie.1  Makefile  Makefile.Mac  Makefile.Ubuntu  README.md  aia_prep.pro  aviFunction.c  aviFunction.h  cmake_install.cmake  fitsFunction.c  fitsFunction.h  kernelConv.cu  kernelConv.cuh  launchTestCmdLine.sh  main.c  main.cu  parserCmdLine.c  parserCmdLine.h
src/: aviFunction.c  aviFunction.h  fitsFunction.c  fitsFunction.h  kernelConv.cu  kernelConv.cuh  main.cu  parserCmdLine.c  parserCmdLine.h
